[JBTM-2524] Added a new test to check CMR records and solved JBTM-2524