@@ -25,8 +25,9 @@
   <description>Narayana: ArjunaJTA jta</description>
 
   <properties>
+    <!-- java.net.preferIPv6Addresses=false is a workaround to (not) solve the bug in arquillian-extension-byteman -->
     <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1]
-      -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
+      -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=false</ipv6.server.jvm.args>
     <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.modular}</server.jvm.args>
   </properties>
   <dependencies>
@@ -134,16 +135,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.jboss.arquillian.protocol</groupId>
-      <artifactId>arquillian-protocol-servlet-jakarta</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.arquillian.junit</groupId>
-      <artifactId>arquillian-junit-container</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>org.jboss.narayana</groupId>
       <artifactId>test-utils</artifactId>
       <scope>test</scope>
@@ -183,6 +174,7 @@
             <configuration>
               <testExcludes>
                 <exclude>io/narayana/perf/product/*.java</exclude>
+                <exclude>**/integration/*IntegrationTest.java</exclude>
               </testExcludes>
             </configuration>
           </execution>
@@ -195,7 +187,6 @@
           <useManifestOnlyJar>false</useManifestOnlyJar>
           <excludes>
             <exclude>**/io/narayana/perf/product/*</exclude>
-            <exclude>**/integration/*IntegrationTest.java</exclude>
             <!-- exclude tests which were run above using byteman scripts -->
             <exclude>**/recovery/CrashRecovery.java</exclude>
           </excludes>
@@ -237,6 +228,18 @@
         </plugins>
       </build>
     </profile>
+    <!-- For further info about this profile, refer to https://github.com/arquillian/arquillian-extension-byteman -->
+    <profile>
+      <id>use-toolsjar-jigsaw</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <properties>
+        <byteman.agent.support>-Djboss.modules.system.pkgs=com.sun.tools.attach,org.jboss.byteman -Djdk.attach.allowAttachSelf=true</byteman.agent.support>
+        <!-- required for VM attach under JDK 11-->
+        <surefire.argline>-Djdk.attach.allowAttachSelf=true</surefire.argline>
+      </properties>
+    </profile>
     <profile>
       <id>arq</id>
       <activation>
@@ -248,44 +251,10 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>org.wildfly.arquillian</groupId>
-          <artifactId>wildfly-arquillian-container-managed</artifactId>
+          <groupId>org.jboss.arquillian.core</groupId>
+          <artifactId>arquillian-core-api</artifactId>
           <scope>test</scope>
         </dependency>
-        <dependency>
-          <groupId>org.jboss</groupId>
-          <artifactId>jboss-transaction-spi</artifactId>
-          <scope>provided</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>org.jboss.logging</groupId>
-              <artifactId>jboss-logging-spi</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.logging</groupId>
-          <artifactId>jboss-logging</artifactId>
-          <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.postgresql</groupId>
-          <artifactId>postgresql</artifactId>
-          <scope>test</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
-          <scope>test</scope>
-        </dependency>
-
         <dependency>
           <groupId>org.jboss.arquillian.protocol</groupId>
           <artifactId>arquillian-protocol-servlet-jakarta</artifactId>
@@ -296,17 +265,61 @@
           <artifactId>arquillian-junit-container</artifactId>
           <scope>provided</scope>
         </dependency>
+        <dependency>
+          <groupId>org.jboss.arquillian.extension</groupId>
+          <artifactId>arquillian-extension-byteman</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.extras.creaper</groupId>
+          <artifactId>creaper-core</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.core</groupId>
+          <artifactId>wildfly-controller-client</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.core</groupId>
+          <artifactId>wildfly-cli</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.arquillian</groupId>
+          <artifactId>wildfly-arquillian-container-managed</artifactId>
+          <scope>test</scope>
+        </dependency>
       </dependencies>
       <build>
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>arq-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <phase>test-compile</phase>
+                <configuration>
+                  <testIncludes>
+                    <include>**/integration/*IntegrationTest.java</include>
+                  </testIncludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <argLine>${surefire.argline}</argLine>
               <systemPropertyVariables combine.children="append">
                 <!--
                     Used in arquillian.xml
                 -->
-                <server.jvm.args>${server.jvm.args}</server.jvm.args>
+                <server.jvm.args>${server.jvm.args} ${byteman.agent.support}</server.jvm.args>
                 <node.address>127.0.0.1</node.address>
               </systemPropertyVariables>
               <redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -332,75 +345,76 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>org.wildfly.arquillian</groupId>
-          <artifactId>wildfly-arquillian-container-managed</artifactId>
-          <version>${version.org.wildfly.arquillian}</version>
+          <groupId>org.jboss.arquillian.core</groupId>
+          <artifactId>arquillian-core-api</artifactId>
           <scope>test</scope>
         </dependency>
-        <dependency>
-          <groupId>org.jboss</groupId>
-          <artifactId>jboss-transaction-spi</artifactId>
-          <scope>provided</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>org.jboss.logging</groupId>
-              <artifactId>jboss-logging-spi</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.logging</groupId>
-          <artifactId>jboss-logging</artifactId>
-          <version>${version.org.jboss.logging.jboss-logging}</version>
-          <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>${version.junit}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.postgresql</groupId>
-          <artifactId>postgresql</artifactId>
-          <version>${version.postgresql}</version>
-          <scope>test</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
-          <version>${version.com.h2database}</version>
-          <scope>test</scope>
-        </dependency>
-
         <dependency>
           <groupId>org.jboss.arquillian.protocol</groupId>
           <artifactId>arquillian-protocol-servlet-jakarta</artifactId>
-          <version>${version.org.jboss.arquillian.core}</version>
           <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>org.jboss.arquillian.junit</groupId>
           <artifactId>arquillian-junit-container</artifactId>
-          <version>${version.org.jboss.arquillian.core}</version>
           <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.arquillian.extension</groupId>
+          <artifactId>arquillian-extension-byteman</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.extras.creaper</groupId>
+          <artifactId>creaper-core</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.core</groupId>
+          <artifactId>wildfly-controller-client</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.core</groupId>
+          <artifactId>wildfly-cli</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.arquillian</groupId>
+          <artifactId>wildfly-arquillian-container-managed</artifactId>
+          <scope>test</scope>
         </dependency>
       </dependencies>
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>arqIPv6-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <phase>test-compile</phase>
+                <configuration>
+                  <testIncludes>
+                    <include>**/integration/*IntegrationTest.java</include>
+                  </testIncludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <skip>false</skip>
-              <argLine>${ipv6.server.jvm.args}</argLine>
+              <argLine>${surefire.argline}</argLine>
               <systemPropertyVariables combine.children="append">
                 <!--
                                     Used in arquillian.xml
                                 -->
-                <server.jvm.args>${server.jvm.args} ${ipv6.server.jvm.args}</server.jvm.args>
+                <server.jvm.args>${server.jvm.args} ${byteman.agent.support} ${ipv6.server.jvm.args}</server.jvm.args>
                 <node.address>[::1]</node.address>
               </systemPropertyVariables>
               <redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -421,14 +435,12 @@
         <dependency>
           <groupId>com.ibm.db2</groupId>
           <artifactId>jcc</artifactId>
-          <version>${version.com.ibm}</version>
           <scope>test</scope>
         </dependency>
         <!--
         <dependency>
           <groupId>com.microsoft.sqlserver</groupId>
           <artifactId>sqljdbc4</artifactId>
-          <version>${version.com.microsoft.sqlserver}</version>
           <systemPath>${orson.jar.location}/../qa/dbdrivers/mssql2005_sqljdbc_2.0/enu/sqljdbc4.jar
           </systemPath>
           <scope>system</scope>
@@ -436,7 +448,6 @@
         <dependency>
           <groupId>com.sybase.jdbcx</groupId>
           <artifactId>jconn4</artifactId>
-          <version>jConnect-7_0</version>
           <systemPath>${orson.jar.location}/../qa/dbdrivers/jConnect-6_0/classes/jconn3.jar</systemPath>
           <scope>system</scope>
         </dependency>
@@ -444,7 +455,6 @@
         <dependency>
           <groupId>com.oracle.database.jdbc</groupId>
           <artifactId>ojdbc8</artifactId>
-          <version>${version.com.oracle}</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
